--- a/patterns/basics-utilities-box-shadow/basics-utilities-box-shadow.rendered.html
+++ b/patterns/basics-utilities-box-shadow/basics-utilities-box-shadow.rendered.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1483709777705" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483709777705" media="all" />
-  <link rel="stylesheet" href="../../css/patternfly.css?1483709777705" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1483712165409" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483712165409" media="all" />
+  <link rel="stylesheet" href="../../css/patternfly.css?1483712165409" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -18,8 +18,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483709777705" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483709777705" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483712165409" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483712165409" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -66,7 +66,7 @@
       "patternLineagesR": [],
       "lineageR": [],
       "patternLineageEExists": false,
-      "patternDesc": "<p>This is a <em>Markdown</em> description of my pattern.</p>\n",
+      "patternDesc": "<h2>Overview</h2>\n<p>Use box shadow utilities to quickly style the <code>box-shadow</code> of an element.</p>\n<h2>Usage</h2>\n<table>\n<thead>\n<tr>\n<th>Class</th>\n<th>Usage</th>\n</tr>\n</thead>\n<tbody>\n<tr>\n<td><code>.pf-box-shadow-none</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Removes box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-inset</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds an inset box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-sm</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a small box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-md</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a medium box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-lg</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a large box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-right</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a box shadow to the right of the element <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-left</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a box shadow to the left of the element <strong>Required:</strong> No</td>\n</tr>\n</tbody>\n</table>\n",
       "patternBreadcrumb": {
         "patternType": "basics",
         "patternSubtype": "utilities"
@@ -113,10 +113,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1483709777705">
+  <script id="pl-js-polyfill-insert-1483712165409">
     (function() {
       if (self != top) {
-        var cb = '1483709777705';
+        var cb = '1483712165409';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -126,10 +126,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1483709777705">
+  <script id="pl-js-insert-1483712165409">
     (function() {
       if (self != top) {
-        var cb = '1483709777705';
+        var cb = '1483712165409';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
