--- a/patterns/basics/index.html
+++ b/patterns/basics/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1483709777705" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483709777705" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1483709777705" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1483712165409" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483712165409" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1483712165409" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483709777705" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483709777705" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483712165409" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483712165409" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -1518,7 +1518,7 @@ Patternfly style single level with dropdown open
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-box-shadow" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>This is a <em>Markdown</em> description of my pattern.</p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"utilities"},"patternExtension":"hbs","patternName":"Box Shadow","patternPartial":"basics-box-shadow","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<h2>Overview</h2>\n<p>Use box shadow utilities to quickly style the <code>box-shadow</code> of an element.</p>\n<h2>Usage</h2>\n<table>\n<thead>\n<tr>\n<th>Class</th>\n<th>Usage</th>\n</tr>\n</thead>\n<tbody>\n<tr>\n<td><code>.pf-box-shadow-none</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Removes box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-inset</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds an inset box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-sm</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a small box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-md</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a medium box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-lg</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a large box shadow <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-right</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a box shadow to the right of the element <strong>Required:</strong> No</td>\n</tr>\n<tr>\n<td><code>.pf-box-shadow-left</code> <strong>Applied to:</strong> Any element</td>\n<td><strong>Outcome:</strong> Adds a box shadow to the left of the element <strong>Required:</strong> No</td>\n</tr>\n</tbody>\n</table>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"utilities"},"patternExtension":"hbs","patternName":"Box Shadow","patternPartial":"basics-box-shadow","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="viewall-basics-zexample" class="sg-pattern-category">
@@ -1544,11 +1544,11 @@ Patternfly style single level with dropdown open
   </div>
   <div class="sg-pattern-example">
     <ul>
-  <li>Name: Jacobus Sneiders</li>
-  <li>Name: Plinius Sloane</li>
-  <li>Name: Teun Richard</li>
-  <li>Name: Duane Wilms</li>
   <li>Name: Bertil Aaij</li>
+  <li>Name: Duane Wilms</li>
+  <li>Name: Matthias Macguinness</li>
+  <li>Name: Aquila Achterkamp</li>
+  <li>Name: Fergus Althuis</li>
 </ul>
 
   </div>
@@ -1598,10 +1598,10 @@ Patternfly style single level with dropdown open
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1483709777705">
+<script id="pl-js-polyfill-insert-1483712165409">
   (function() {
     if (self != top) {
-      var cb = '1483709777705';
+      var cb = '1483712165409';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -1611,10 +1611,10 @@ Patternfly style single level with dropdown open
   })();
 </script>
 
-<script id="pl-js-insert-1483709777705">
+<script id="pl-js-insert-1483712165409">
   (function() {
     if (self != top) {
-      var cb = '1483709777705';
+      var cb = '1483712165409';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
