--- a/patterns/basics-table-table/basics-table-table.rendered.html
+++ b/patterns/basics-table-table/basics-table-table.rendered.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1484058440324" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484058440324" media="all" />
-  <link rel="stylesheet" href="../../css/patternfly.css?1484058440324" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1484244515881" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484244515881" media="all" />
+  <link rel="stylesheet" href="../../css/patternfly.css?1484244515881" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -18,8 +18,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484058440324" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484058440324" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484244515881" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484244515881" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -27,11 +27,11 @@
 
 <body class="">
   <div class="table-responsive">
-    <table class="table    ">
+    <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
           <th>Session</th>
-          <th>Course Number</th>
+          <th class="text-right">Course Number</th>
           <th>Title</th>
           <th>Level</th>
           <th>Course Format</th>
@@ -49,7 +49,7 @@
           <td>T </td>
           <td>20115</td>
         </tr>
-        <tr class="">
+        <tr>
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6020</td>
           <td>Ethical Issues in Organizational Communication</td>
@@ -58,7 +58,7 @@
           <td>W </td>
           <td>21509</td>
         </tr>
-        <tr class="">
+        <tr>
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6050</td>
           <td>Crisis Communication</td>
@@ -67,7 +67,7 @@
           <td>W </td>
           <td>20915</td>
         </tr>
-        <tr class="">
+        <tr>
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6050</td>
           <td>Crisis Communication</td>
@@ -76,7 +76,7 @@
           <td>Th </td>
           <td>21550</td>
         </tr>
-        <tr class="">
+        <tr>
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6060</td>
           <td>Negotiation, Mediation, and Facilitation</td>
@@ -85,7 +85,7 @@
           <td>Th </td>
           <td>20119</td>
         </tr>
-        <tr class="">
+        <tr>
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6060</td>
           <td>Negotiation, Mediation, and Facilitation</td>
@@ -141,22 +141,10 @@
       "patternLineageExists": false,
       "patternLineages": [],
       "lineage": [],
-      "patternLineageRExists": true,
-      "patternLineagesR": [{
-        "lineagePattern": "basics-table-contextual-classes",
-        "lineagePath": "../../patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html"
-      }, {
-        "lineagePattern": "basics-table-patternfly",
-        "lineagePath": "../../patterns/basics-table-table-patternfly/basics-table-table-patternfly.rendered.html"
-      }],
-      "lineageR": [{
-        "lineagePattern": "basics-table-contextual-classes",
-        "lineagePath": "../../patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html"
-      }, {
-        "lineagePattern": "basics-table-patternfly",
-        "lineagePath": "../../patterns/basics-table-table-patternfly/basics-table-table-patternfly.rendered.html"
-      }],
-      "patternLineageEExists": true,
+      "patternLineageRExists": false,
+      "patternLineagesR": [],
+      "lineageR": [],
+      "patternLineageEExists": false,
       "patternDesc": "<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/content/tables/\">see complete documentation here</a></p>\n",
       "patternBreadcrumb": {
         "patternType": "basics",
@@ -204,10 +192,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1484058440324">
+  <script id="pl-js-polyfill-insert-1484244515881">
     (function() {
       if (self != top) {
-        var cb = '1484058440324';
+        var cb = '1484244515881';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -217,10 +205,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1484058440324">
+  <script id="pl-js-insert-1484244515881">
     (function() {
       if (self != top) {
-        var cb = '1484058440324';
+        var cb = '1484244515881';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
