--- a/patterns/components-forms-search/components-forms-search.markup-only.html
+++ b/patterns/components-forms-search/components-forms-search.markup-only.html
@@ -1,4 +1,8 @@
-<input id="text" type="text" placeholder="Text Input">
+<form class="form-inline">
+  <label class="sr-only" for="inlineFormInput">Name</label>
+  <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 <button class="btn btn-secondary" aria-labelledby="Button">
  Search
 </button>
