--- a/patterns/templates-form/templates-form.markup-only.html
+++ b/patterns/templates-form/templates-form.markup-only.html
@@ -1,8 +1,30 @@
-<input id="text" type="text" placeholder="Text Input">
+<form class="form-inline">
+  <label class="sr-only" for="inlineFormInput">Name</label>
+  <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 <br>
-<input id="text" type="text" placeholder="Text Input">
+
+
+
+
+
+<form class="form-inline">
+  <label class="sr-only" for="inlineFormInput">Name</label>
+  <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 <br>
-<input id="text" type="text" placeholder="Text Input">
+
+
+
+
+
+<form class="form-inline">
+  <label class="sr-only" for="inlineFormInput">Name</label>
+  <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 <br>
 <button class="btn btn-secondary" aria-labelledby="Button">
  Button
