--- a/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
+++ b/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
@@ -1,7 +1,7 @@
 <ul>
-  <li>Name: Bertil Aaij</li>
-  <li>Name: Junius Koolen</li>
-  <li>Name: Fergus Althuis</li>
-  <li>Name: Plinius Sloane</li>
   <li>Name: Aquila Achterkamp</li>
+  <li>Name: Siguror Hanigan</li>
+  <li>Name: Junius Koolen</li>
+  <li>Name: Freyr Hines</li>
+  <li>Name: Jacobus Sneiders</li>
 </ul>
