--- a/patterns/basics/index.html
+++ b/patterns/basics/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1484244515881" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484244515881" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1484244515881" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1484587714850" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484587714850" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1484587714850" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484244515881" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484244515881" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484587714850" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484587714850" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -485,16 +485,13 @@
     
   </div>
   <div class="sg-pattern-example">
-    
-
-
-
-
-<form class="form-inline">
+    <form class="form-inline">
   <label class="sr-only" for="inlineFormInput">Name</label>
   <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-input" class="sg-pattern-data">
@@ -1553,11 +1550,11 @@ Patternfly style single level with dropdown open
   </div>
   <div class="sg-pattern-example">
     <ul>
-  <li>Name: Bertil Aaij</li>
-  <li>Name: Junius Koolen</li>
-  <li>Name: Fergus Althuis</li>
-  <li>Name: Plinius Sloane</li>
   <li>Name: Aquila Achterkamp</li>
+  <li>Name: Siguror Hanigan</li>
+  <li>Name: Junius Koolen</li>
+  <li>Name: Freyr Hines</li>
+  <li>Name: Jacobus Sneiders</li>
 </ul>
 
   </div>
@@ -1607,10 +1604,10 @@ Patternfly style single level with dropdown open
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1484244515881">
+<script id="pl-js-polyfill-insert-1484587714850">
   (function() {
     if (self != top) {
-      var cb = '1484244515881';
+      var cb = '1484587714850';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -1620,10 +1617,10 @@ Patternfly style single level with dropdown open
   })();
 </script>
 
-<script id="pl-js-insert-1484244515881">
+<script id="pl-js-insert-1484587714850">
   (function() {
     if (self != top) {
-      var cb = '1484244515881';
+      var cb = '1484587714850';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
