--- a/patterns/templates-typography/index.html
+++ b/patterns/templates-typography/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1484244515881" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484244515881" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1484244515881" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1484587714850" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484587714850" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1484587714850" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484244515881" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484244515881" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484587714850" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484587714850" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -55,57 +55,57 @@
 <div class="container-fluid">
 
   <div class="row">
-    <div class="col-md-12 mb-pf-xxxxl">
-      <h3 class="my-pf-xxl">PatternFly Typography</h3>
+    <div class="col-md-12">
+      <h3>PatternFly Typography</h3>
 
       <p>Patternfly uses Overpass, an open-licensed alternative to Interstate that is specifically for use on-screen and in our software. Like Interstate, Overpass is based on the FHWA (Federal Highway Administration) series of fonts, which has been used for US Highway signage since 1945. <a href="#">Download Overpass »</a></p>
 
       <p>Overpass can be used in a lot of the same ways as Interstate. We use Overpass for all web text, editable presentations, and product interfaces.</p>
 
-      <table class="table mb-pf-xxxxl">
+      <table class="table">
         <tbody>
           <tr>
-            <td class="py-1"><h1 class="mb-0">Heading 1</h1></td>
-            <td class="py-1"><h1 class="mb-0">Overpass Light 28px</h1></td>
-            <td class="py-1"><h1 class="mb-0">Weight 400</h1></td>
+            <td class="py-1"><h1 class="m-0">Heading 1</h1></td>
+            <td class="py-1"><h1 class="m-0">Overpass Light 28px</h1></td>
+            <td class="py-1"><h1 class="m-0">Weight 400</h1></td>
           </tr>
           <tr>
-            <td class="py-1"><h2 class="mb-0">Heading 2</h2></td>
-            <td class="py-1"><h2 class="mb-0">Overpass Light 24px</h2></td>
-            <td class="py-1"><h2 class="mb-0">Weight 400</h2></td>
+            <td class="py-1"><h2 class="m-0">Heading 2</h2></td>
+            <td class="py-1"><h2 class="m-0">Overpass Light 24px</h2></td>
+            <td class="py-1"><h2 class="m-0">Weight 400</h2></td>
           </tr>
           <tr>
-            <td class="py-1"><h3 class="mb-0">Heading 3</h3></td>
-            <td class="py-1"><h3 class="mb-0">Overpass Light 20px</h3></td>
-            <td class="py-1"><h3 class="mb-0">Weight 400</h3></td>
+            <td class="py-1"><h3 class="m-0">Heading 3</h3></td>
+            <td class="py-1"><h3 class="m-0">Overpass Light 20px</h3></td>
+            <td class="py-1"><h3 class="m-0">Weight 400</h3></td>
           </tr>
           <tr>
-            <td class="py-1"><h4 class="mb-0">Heading 4</h4></td>
-            <td class="py-1"><h4 class="mb-0">Overpass Semi Bold 16px</h4></td>
-            <td class="py-1"><h4 class="mb-0">Weight 600</h4></td>
+            <td class="py-1"><h4 class="m-0">Heading 4</h4></td>
+            <td class="py-1"><h4 class="m-0">Overpass Semi Bold 16px</h4></td>
+            <td class="py-1"><h4 class="m-0">Weight 600</h4></td>
           </tr>
           <tr>
-            <td class="py-1"><p class="mb-0">Body Content</p></td>
-            <td class="py-1"><p class="mb-0">Overpass Regular 14px</p></td>
-            <td class="py-1"><p class="mb-0">Weight 500</p></td>
+            <td class="py-1"><p class="m-0">Body Content</p></td>
+            <td class="py-1"><p class="m-0">Overpass Regular 14px</p></td>
+            <td class="py-1"><p class="m-0">Weight 500</p></td>
           </tr>
           <tr>
-            <td class="py-1"><p class="mb-0"><strong>Body Content Bold</strong></p></td>
-            <td class="py-1"><p class="mb-0"><strong>Overpass Regular 14px</strong></p></td>
-            <td class="py-1"><p class="mb-0"><strong>Weight 700</strong></p></td>
+            <td class="py-1"><p class="m-0"><strong>Body Content Bold</strong></p></td>
+            <td class="py-1"><p class="m-0"><strong>Overpass Regular 14px</strong></p></td>
+            <td class="py-1"><p class="m-0"><strong>Weight 700</strong></p></td>
           </tr>
           <tr>
-            <td class="py-1"><p class="mb-0"><small>Small Text</small></p></td>
-            <td class="py-1"><p class="mb-0"><small>Overpass Regular 12px</small></p></td>
-            <td class="py-1"><p class="mb-0"><small>Weight 500</small></p></td>
+            <td class="py-1"><p class="m-0"><small>Small Text</small></p></td>
+            <td class="py-1"><p class="m-0"><small>Overpass Regular 12px</small></p></td>
+            <td class="py-1"><p class="m-0"><small>Weight 500</small></p></td>
           </tr>
         </tbody>
       </table>
 
 
-      <h3 class="mb-pf-xl">Application Heading 3</h3>
+      <h3>Application Heading 3</h3>
 
-      <h4 class="mb-pf-lg">Subheading Heading 4</h4>
+      <h4>Subheading Heading 4</h4>
 
       <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
 
@@ -120,7 +120,7 @@
     </div>
 
     <div class="col-md-4">
-      <h4 class="mb-pf-lg">Unordered List</h4>
+      <h4>Unordered List</h4>
       <ul>
         <li>Lorem ipsum</li>
         <li>Consectetur
@@ -136,7 +136,7 @@
 
     <div class="col-md-4">
 
-      <h4 class="mb-pf-lg">Ordered List</h4>
+      <h4>Ordered List</h4>
       <ul>
         <li>Lorem ipsum</li>
         <li>Consectetur</li>
@@ -215,10 +215,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1484244515881">
+<script id="pl-js-polyfill-insert-1484587714850">
   (function() {
     if (self != top) {
-      var cb = '1484244515881';
+      var cb = '1484587714850';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -228,10 +228,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1484244515881">
+<script id="pl-js-insert-1484587714850">
   (function() {
     if (self != top) {
-      var cb = '1484244515881';
+      var cb = '1484587714850';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
